class_blog_jpa_v1/src/main/java/com/example/demo/common/errors/Exception403.java
package com.example.demo.common.errors;

public class Exception403 extends RuntimeException {

	public Exception403(String msg) {
		super();
	}
}
